# flet-tpl-v3

./: .gitignore  Makefile  changelogs  main.py  pyproject.toml  readme.md  requirements.txt  test.py  todos.md
app/components/: router.py
app/config/: config.py  routes.py  sys_default.py
app/db/: manager.py  models.py  utils.py
app/db/defaults/: t_sys_config.py
app/utils/: file_util.py  log_util.py  sys_util.py  xlsx_util.py
app/view/: app_view.py  homepage.py  system_info_view.py
app/view/common/: controls.py
app/view/settings/: basic_view.py
app/view/tools/: autoclick_view.py  grafana_data_view.py  json_format_view.py
app/viewmodel/tools/: autoclick.py
conf/: global.toml  log.toml
devtools/: autoclick.py  flet_build.py  nuitka_build.py  route-change.ps1
devtools/highcharts/: default.ipynb  main.py
devtools/highcharts/gantt/: index.html  index.js
docs/: FAQs.md  JSEncrypt.java  crontab.md  jmeter-cookbook.md  k8s.md  mermaid.md  nmon.md  peewee.md  playwright.md  prometheus.md  python-profile.md  ssh-sftp.md  tcpdump.md  the_road_to_game_development.md
